# PDEPack

./: .gitignore  CMakeLists.txt  README.md
Applications/Drahtgleichung/: drahtgleichung.cpp
LinAlg/include/: GaussSeidel.h  Iterative.h  Iterative.h~  Jacobi.h  TriDiag.h  TriLU.h
LinAlg/src/: GaussSeidel.cpp  GaussSeidelTriScalar.cpp  Iterative.cpp  Jacobi.cpp  TriDiag.cpp  TriLU.cpp
Vis/include/: visUtils.h
Vis/src/: visUtils.cpp
examples/: CMakeLists.txt~
examples/IterativLGS/: CMakeLists.txt  gaussSeidelTest.cpp  jacobiTest.cpp  rhs1.txt
examples/TriLU/: luTest.cpp  triTest.cpp
kernel/include/: Wire1D.h1  wire1D.h
kernel/src/: utils.cpp  wire1D.cpp
